--- a/codeblue/src/main/resources/templates/codeblue/today.html
+++ b/codeblue/src/main/resources/templates/codeblue/today.html
@@ -23,9 +23,9 @@
 </head>
 
 <body id="page-top">
- 
+ <div id="app">
 	<!-- Topbar -->
-	<div id="topBar"></div>
+	<component :is="topbar"></component>
 	<!-- End of Topbar -->
 
 		<!-- Begin Page Content -->
@@ -33,7 +33,9 @@
 			<div class="row"> 
 			
 				<!-- Side Bar -->
-				<div class="col-sm-1 p-0" style="border-right: 1px solid #d9d9d9;" id="leftSideBar"></div>
+				<div class="col-sm-1 p-0" style="border-right: 1px solid #d9d9d9;" id="leftSideBar">
+					<component :is="leftSideBar"></component>
+				</div>
 				<!-- Side Bar End -->
 				
 				<!-- Page Content -->
@@ -45,7 +47,25 @@
 					</div><!-- page Heading End -->
 					
 					<table id="questionBoard" class="table table-hover">
-						
+						<tr v-for="item in question.list">
+						<td width='9%' class='px-1'>
+							<div class='text-center pt-1'>{{item.voteCount}}<br>
+							<small class='my-1'>추천</small>
+							</div>
+						</td>
+						<td width='11%' class='px-1'>
+							<div class='card border-success text-center pt-1'>{{item.answerCount}}<br>
+							<small class='text-success my-1'>답변</small>
+							</div>
+						</td>
+						<td>
+							<a class='nav-link' href='/questionBoardOne?questionId=item.questionId+'>{{item.questionTitle}}</a>
+							<div class='d-flex justify-content-between'>
+								<a v-for="tags in item.tag" class="text-primary mx-1 p-0 px-1 btn btn-sm btn-light alert-primary" href="#">#{{ tags }}</a>
+								<small class='p-2'>uploaded at {{ item.questionDatetime }} by <a href='/userOne?userId=item.user.userId'>{{ item.user.userName }}</small>
+							</div> 
+						</td>
+						</tr>
 					</table>
 					<br>
 					<p>
@@ -56,17 +76,13 @@
 				
 				<!-- Page rigth side bar -->
 				<div class="col-sm-3 pt-5 mt-5">
-					<div id="rightSideBar"></div>
+					<component :is="rightSideBar"></component>
 				</div> <!-- rigth side bar end -->
 				
 			</div>
 		</div> 
 
-	<!-- Footer -->
-	<div id="footer"></div>
-	<!-- End of Footer -->
-	
-<!-- ETC -->
+
   <!-- Scroll to Top Button-->
   <a class="scroll-to-top rounded bg-primary" href="#page-top">
     <i class="fas fa-angle-up"></i>
@@ -90,18 +106,27 @@
       </div>
     </div>
   </div>
-
-	<!-- Bootstrap core JavaScript-->
-	<script src="vendor/jquery/jquery.min.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-	<!-- Core plugin JavaScript-->
-	<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-	<!-- Custom scripts for all pages-->
-	<script src="js/sb-admin-2.min.js"></script>
-  	<!-- CodeBlue scripts -->
-  	<script src="js/codeBlueUser.js"></script>
-	
+  
+	<!-- Footer -->        
+	<component :is="footer"></component>
+	<!-- End of Footer -->
+ </div>
 </body>
+
+<!-- vue scripts -->
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="js/sb-admin-2.min.js"></script>
+
+<!-- CodeBlue scripts -->
+<script src="js/codeBlueUser.js"></script>
 </html>
+
